src/app.css
@import 'tailwindcss';
@plugin 'daisyui' {
	themes:
		cmyk --default,
		dark --prefersdark;
	/* Disable scrollbar gutter due to Chrome bug: https://stackoverflow.com/questions/77787580/width-of-screen-is-not-calculating-correctly-when-using-scrollbar-gutter-stable */
	exclude: rootscrollgutter;
}

@plugin 'daisyui/theme' {
	name: 'cmyk';
	--radius-selector: 0.5rem;
}

.bg-diagonal-pattern {
	background-image: repeating-linear-gradient(
		45deg,
		var(--color-base-100),
		var(--color-base-100) 13px,
		var(--color-base-200) 13px,
		var(--color-base-200) 14px
	);
	background-size: 40px 40px;
}

@media screen and (max-width: 640px) {
	/* Decrease table padding on mobile so it fits */
	.table tr :where(th, td):first-child {
		padding-inline-start: 0;
	}
	.table tr :where(th, td):last-child {
		padding-inline-end: 0;
	}
}

@layer base {
	main h2 {
		@apply mt-2 mb-2 text-lg font-bold;
	}
}

